--- a/src/App.css
+++ b/src/App.css
@@ -4,39 +4,230 @@
   padding: 2rem;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+:root {
+  --numTiles: 3;
 }
 
-@keyframes logo-spin {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: black;
+}
+
+#score {
+  height: 10px;
+  width: 30px;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  font-size: 40px;
+  color: rgba(164, 106, 106, 0.873);
+  /* display: none */
+}
+
+.container {
+  flex-direction: column;
+
+  max-width: 1000px;
+  justify-items: center;
+  align-items: center;
+
+  border-radius: 10px;
+  color: white;
+
+  display: grid;
+  grid-template-columns: repeat(var(--numTiles), minmax(20px, 100px));
+  grid-template-rows: repeat(var(--numTiles), minmax(20px, 100px));
+
+  max-width: 1000px;
+
+  justify-content: center;
+  align-content: center;
+  margin: auto;
+  margin-top: 50px;
+  /* margin-left: 100px;
+  margin-right: 100px; */
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: rgba(164, 106, 106, 0);
+  animation: regular-pulse 5s ease-in-out infinite alternate;
+}
+.container-gameOver {
+  display: flex;
+  flex-direction: column;
+
+  max-width: 1000px;
+  justify-items: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 50px;
+
+  border-radius: 10px;
+  color: white;
+}
+
+.play-btn {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 5rem;
+  text-align: center;
+  margin: auto;
+  margin-top: 10px;
+  padding: 7px;
+  cursor: pointer;
+  color: black;
+}
+
+.hide {
+  display: none;
+}
+
+.tile {
+  height: 3.125rem;
+  width: 3.125rem;
+  border: 1px solid white;
+  cursor: pointer;
+  margin: auto;
+  border-radius: 3px;
+  /* animation: tile-pulse 2s ease-in-out infinite alternate; */
+}
+
+.tile:active {
+  transform: scale(1);
+  animation: pulse 0.15s forwards;
+}
+
+.tile:hover {
+  transform: scale(1.1);
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.9);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  70% {
+    transform: scale(1.1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+.game-Over {
+  font-family: "Arial", sans-serif;
+  font-size: 36px;
+  color: #000000;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+  animation: neon 1.5s ease-in-out infinite alternate;
+}
+
+@keyframes neon {
   from {
-    transform: rotate(0deg);
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff,
+      0 0 40px rgb(255, 0, 0), 0 0 70px rgb(255, 0, 0), 0 0 80px rgb(255, 0, 0),
+      0 0 100px rgb(255, 0, 0), 0 0 150px #0ff;
   }
   to {
-    transform: rotate(360deg);
+    text-shadow: 0 0 20px #fff, 0 0 30px rgb(255, 0, 0), 0 0 40px rgb(255, 0, 0),
+      0 0 70px rgb(255, 0, 0), 0 0 80px rgb(255, 0, 0), 0 0 100px rgb(255, 0, 0),
+      0 0 150px rgb(255, 0, 0), 0 0 200px #0ff;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+.finalScore {
+  margin: 15px;
+}
+
+.leaderboard {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 400px;
+  justify-content: center;
+  align-content: center;
+  background-color: #9188e600;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  /* box-shadow: 2px 2px 5px 5px rgba(145, 33, 160, 0.801); */
+  animation: regular-pulse 5s ease-in-out infinite alternate;
+}
+
+@keyframes regular-pulse {
+  from {
+    box-shadow: 0 0 10px #dacc0c, 0 0 20px #fff, 0 0 30px #fff,
+      0 0 10px rgb(90, 8, 65), 0 0 35px rgb(255, 0, 0),
+      0 0 20px rgb(152, 24, 202), 0 0 30px rgb(190, 23, 241), 0 0 75px #0ff;
+  }
+  to {
+    box-shadow: 0 0 20px #bccf10, 0 0 30px rgb(233, 19, 151),
+      0 0 20px rgb(133, 17, 113), 0 0 10px rgb(255, 0, 0),
+      0 0 40px rgb(236, 59, 183), 0 0 30px rgb(255, 0, 0),
+      0 0 30px rgb(255, 0, 0), 0 0 150px rgba(98, 60, 134, 0.671);
   }
 }
 
-.card {
-  padding: 2em;
+/* @keyframes tile-pulse {
+  from {
+    box-shadow: 0 0 10px #dacc0c, 0 0 20px #fff, 0 0 30px #ffffff,
+      0 0 10px rgb(90, 8, 65), 0 0 35px rgba(255, 0, 0, 0.638),
+      0 0 20px rgb(152, 24, 202), 0 0 30px rgba(190, 23, 241, 0.685),
+      0rgba (0, 255, 255, 0.495) 5px #0ff;
+  }
+  to {
+    box-shadow: 0 0 20px #bccf10, 0 0 20px rgb(233, 19, 151),
+      0 0 20px rgb(133, 17, 113), 0 0 10px rgb(255, 0, 0),
+      0 0 20px rgb(236, 59, 183), 0 0 15px rgb(255, 0, 0),
+      0 0 20px rgb(255, 0, 0), 0 0 10px rgba(98, 60, 134, 0.671);
+  }
+} */
+
+.leaderboard-row {
+  display: flex;
+  background-color: #9e619a00;
+  height: 20px;
+  margin: 10px;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+  color: white;
 }
 
-.read-the-docs {
-  color: #888;
+.leaderboard-col {
+  /* color: rgba(228, 4, 179, 0.123); */
+  color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif,
+    Times, serif;
+  letter-spacing: 4px;
+}
+
+.leaderboard-col {
+  opacity: 1;
+  animation: neon-text 3s ease-in-out infinite alternate;
+  color: white;
+}
+
+@keyframes neon-text {
+  from {
+    text-shadow: 0 0 0px #860fbd, 0 0 0px #6d0abe, 0 0 0px #fff,
+      0 0 0px rgb(255, 0, 0), 0 0 0px rgb(255, 0, 0), 0 0 0px rgb(255, 0, 0),
+      0 0 0px rgb(255, 0, 0), 0 0 0px #0ff;
+  }
+  to {
+    text-shadow: 0 0 0px #fff, 0 0 0px rgb(255, 0, 0), 0 0 0px rgb(255, 0, 0),
+      0 0 0px rgb(255, 0, 0), 0 0 0px rgb(255, 0, 0), 0 0 0px rgb(255, 0, 0),
+      0 0 0px rgb(255, 0, 0), 0 0 0px #0ff;
+  }
 }
