--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 :root {
@@ -89,11 +89,21 @@ body {
 .tile {
   height: 3.125rem;
   width: 3.125rem;
-  border: 1px solid white;
+  border: 2px solid rgba(255, 255, 255, 0.489);
   cursor: pointer;
   margin: auto;
   border-radius: 3px;
+  background-color: #25a6ecad;
   /* animation: tile-pulse 2s ease-in-out infinite alternate; */
+}
+.tile flashing {
+  background-color: rgba(0, 255, 255, 0.692);
+  height: 3.125rem;
+  width: 3.125rem;
+  border: 1px solid rgba(3, 198, 0, 0.842);
+  cursor: pointer;
+  margin: auto;
+  border-radius: 300px;
 }
 
 .tile:active {
