--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,11 @@ body {
   background-color: black;
 }
 
+h1 {
+  margin: 1px;
+  padding: 15px;
+}
+
 #score {
   font-size: 2rem;
   font-weight: bold;
@@ -33,7 +38,7 @@ body {
 .container {
   flex-direction: column;
 
-  max-width: 1000px;
+  max-width: 500px;
   justify-items: center;
   align-items: center;
 
@@ -60,7 +65,7 @@ body {
   flex-direction: column;
 
   max-width: 1000px;
-  justify-items: center;
+  justify-items: start;
   align-items: center;
   margin: auto;
   margin-top: 50px;
@@ -166,7 +171,7 @@ body {
   flex-direction: column;
   width: 300px;
   height: 400px;
-  justify-content: center;
+  justify-content: start;
   align-content: center;
   background-color: #9188e600;
   border-radius: 10px;
@@ -210,14 +215,18 @@ body {
   background-color: #9e619a00;
   height: 20px;
   margin: 10px;
+
   justify-content: space-around;
   align-items: center;
   border-radius: 10px;
   color: white;
 }
 
+.leaderboard-row:first-child {
+  margin-top: 40px;
+}
+
 .leaderboard-col {
-  /* color: rgba(228, 4, 179, 0.123); */
   color: white;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif,
     Times, serif;
@@ -254,7 +263,7 @@ body {
   text-transform: uppercase;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  text-align: center; /* Center the text */
+  text-align: center;
 }
 
 .play-btn:hover {
