--- a/src/App.css
+++ b/src/App.css
@@ -339,3 +339,13 @@ h1 {
 .bottom-bar > * {
   margin: 0 10px; /* Adjust margin as needed */
 }
+
+.disable-input {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(52, 2, 2, 0.174);
+  z-index: 999;
+}
