--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,8 @@ h1 {
 }
 
 /*CONTAINER DATA*/
-.container {
+.container,
+.container-disabled {
   display: grid;
   grid-template-columns: repeat(
     var(--numTiles),
@@ -90,10 +91,13 @@ h1 {
   align-content: center;
   margin: auto;
   margin-top: 2.5rem;
-  border: 0.0625rem solid white;
+  border: 0.4rem solid rgba(0, 0, 0, 0.263);
   border-radius: 1.3rem;
   background-color: rgba(164, 106, 106, 0);
   animation: regular-pulse 5s ease-in-out infinite alternate;
+}
+.container-disabled {
+  border: 0.4rem dotted rgba(255, 59, 59, 0.601);
 }
 .container-gameOver {
   display: flex;
@@ -223,11 +227,16 @@ h1 {
 
 /* LEADERBOARD DATA */
 .leaderboard {
-  color: white;
   display: flex;
   flex-direction: column;
-  width: 18.75rem; /* Converted from 300px to rem */
-  height: 25rem; /* Converted from 400px to rem */
+  color: white;
+  align-items: center;
+  gap: 10px;
+  width: 300px; /* Converted from 300px to rem */
+  max-height: 500px; /* Set a maximum height for the leaderboard */
+  overflow-y: auto; /* Enable vertical scrolling */
+  overflow-x: hidden;
+
   justify-content: start;
   align-content: center;
   background-color: #9188e600;
@@ -248,42 +257,37 @@ h1 {
     box-shadow: 0 0 1.25rem #bccf10, 0 0 1.875rem rgb(233, 19, 151),
       0 0 1.25rem rgb(133, 17, 113), 0 0 0.625rem rgb(255, 0, 0),
       0 0 2.5rem rgb(236, 59, 183), 0 0 1.875rem rgb(255, 0, 0),
-      0 0 1.875rem rgb(255, 0, 0), 0 0 9.375rem rgba(98, 60, 134, 0.671);
+      0 0 1.875rem rgb(255, 0, 0), 0 0 9.375rem rgba(17, 2, 31, 0);
   }
 }
 
 .leaderboard-row {
   display: flex;
-  background-color: rgba(
-    158,
-    97,
-    154,
-    0
-  ); /* Converted from #9e619a00 to rgba */
-  height: 1.25rem; /* Converted from 20px to rem */
-  margin: 0.625rem; /* Converted from 10px to rem */
 
-  justify-content: space-around;
+  width: 90%;
+  background-color: rgba(0, 0, 0, 0); /* Converted from #9e619a00 to rgba */
+  height: 1.25rem; /* Converted from 20px to rem */
+  margin: 0.5rem; /* Converted from 10px to rem */
+
+  justify-content: space-between;
   align-items: center;
-  border-radius: 0.625rem; /* Converted from 10px to rem */
+
   color: white;
 }
 
 .leaderboard-row:first-child {
-  margin-top: 2.5rem; /* Converted from 40px to rem */
+  margin-top: 1.5rem; /* Converted from 40px to rem */
 }
 
 .leaderboard-col {
   color: white;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif,
-    Times, serif;
-  letter-spacing: 0.25rem; /* Converted from 4px to rem */
-}
-
-.leaderboard-col {
+  font-family: "ShadowsIntoLight", "Gill Sans MT", Calibri, "Trebuchet MS",
+    sans-serif, Times, serif;
+  letter-spacing: 0.4rem; /* Converted from 4px to rem */
+  text-transform: uppercase;
   opacity: 1;
   animation: neon-text 3s ease-in-out infinite alternate;
-  color: white;
+  color: rgb(255, 0, 0);
 }
 
 @keyframes neon-text {
@@ -306,7 +310,7 @@ h1 {
   gap: 0.625rem; /* Converted from 10px to rem */
   border: 0.0625rem solid pink; /* Converted from 1px to rem */
   border-radius: 0.625rem; /* Converted from 10px to rem */
-  box-shadow: 0.3125rem 0.125rem 0.625rem rgba(239, 135, 140, 0.8); /* Converted from 5px, 2px, 10px to rem */
+  box-shadow: 0.3125rem 0.125rem 0.625rem rgba(239, 135, 140, 0.8);
 }
 
 .name-input-label {
@@ -319,12 +323,15 @@ h1 {
   margin-right: 1.25rem; /* Converted from 20px to rem */
   margin-left: 1.25rem; /* Converted from 20px to rem */
   border-radius: 0.3125rem; /* Converted from 5px to rem */
+  text-transform: uppercase;
 }
 
 .name-form-btn {
   width: 50%;
-  align-self: end;
-  padding: 0;
+  height: 50%;
+  align-self: center;
+  padding: 0.6rem;
+  text-transform: uppercase;
   margin-bottom: 1.25rem; /* Converted from 20px to rem */
   margin-right: 1.25rem; /* Converted from 20px to rem */
 }
@@ -346,6 +353,6 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(52, 2, 2, 0.174);
+  background-color: rgba(52, 2, 2, 0);
   z-index: 999;
 }
