--- a/src/App.css
+++ b/src/App.css
@@ -119,11 +119,11 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 7rem;
+  max-width: 9rem;
   text-align: center;
   margin: auto;
   margin-top: 0.625rem; /* Converted from 10px to rem */
-  padding: 0.625rem 1.25rem; /* Converted from 10px, 20px to rem */
+  padding: 0.325rem 0.1rem; /* Converted from 10px, 20px to rem */
   transition: background-color 0.2s ease;
   transition-delay: 0s;
   text-align: center;
@@ -136,8 +136,8 @@ h1 {
 }
 
 .play-btn:hover {
-  background-color: #33a9d463;
   transform: scale(1.05);
+  background-color: #33a9d463;
 }
 
 .play-btn:active {
@@ -170,25 +170,23 @@ h1 {
 }
 
 .tile:active {
-  transform: scale(1);
   animation: pulse 0.15s forwards;
 }
 
-/* .tile:hover {
+.tile:hover {
   background-color: #e4151597;
-  transform: scale(1.1);
-} */
+  transform: scale(1.05);
+}
 
 @keyframes pulse {
   0% {
-    transform: scale(0.9);
+    transform: scale(1);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
   }
 
   50% {
     /* Adjusted keyframe percentage */
-    transform: scale(1.1);
-    box-shadow: 0 0 0 0.625rem rgba(0, 0, 0, 0); /* Converted from 10px to rem */
+    transform: scale(1.05);
   }
 
   100% {
