--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,8 @@ h1 {
   border-radius: 1.3rem;
   background-color: rgba(164, 106, 106, 0);
   animation: regular-pulse 5s ease-in-out infinite alternate;
+  /* animation: rotateBorder 5s forwards infinite; */
+  /*SET TO LINEAR INFINITE FOR FUN / SET TO FORWARDS INFINITE FOR GOOD  */
 }
 .container-disabled {
   border: 0.4rem dotted rgba(255, 59, 59, 0.601);
@@ -109,6 +111,14 @@ h1 {
 
   border-radius: 0.625rem; /* Converted from 10px to rem */
   color: white;
+}
+@keyframes rotateBorder {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* PLAY BUTTON */
@@ -155,10 +165,13 @@ h1 {
   width: 100%; /* Adjust the percentage according to your container */
   max-height: 80%; /* Set the maximum height */
   max-width: 80%; /* Set the maximum width */
-  border: 0.125rem solid rgba(0, 206, 62, 0.489); /* Converted from 2px to rem */
+  border: 0.125rem solid rgba(251, 90, 90, 0.489); /* Converted from 2px to rem */
 
   margin: auto;
   border-radius: 0.8rem; /* Converted from 3px to rem */
+
+  backdrop-filter: blur(10px);
+  transition: transform 0.1s ease; /* Smooth transition on hover */
 }
 
 .tile {
@@ -166,7 +179,7 @@ h1 {
 }
 
 .tile-flashing {
-  background-color: #e4151597;
+  background-color: #e41515c1;
 }
 
 .tile:active {
@@ -231,7 +244,7 @@ h1 {
   align-items: center;
   gap: 10px;
   width: 300px; /* Converted from 300px to rem */
-  max-height: 500px; /* Set a maximum height for the leaderboard */
+  max-height: 450px; /* Set a maximum height for the leaderboard */
   overflow-y: auto; /* Enable vertical scrolling */
   overflow-x: hidden;
 
@@ -242,6 +255,11 @@ h1 {
   margin-top: 1.25rem; /* Converted from 20px to rem */
   margin-bottom: 1.875rem; /* Converted from 30px to rem */
   animation: regular-pulse 5s ease-in-out infinite alternate;
+
+  scrollbar-gutter: auto;
+  /* scrollbar-width: none; */
+  scrollbar-color: rgba(213, 10, 166, 0.723) rgba(58, 11, 76, 0.268);
+  scroll-behavior: smooth;
 }
 
 @keyframes regular-pulse {
@@ -352,5 +370,7 @@ h1 {
   width: 100%;
   height: 100%;
   background-color: rgba(52, 2, 2, 0);
+
+  backdrop-filter: blur(0.1px);
   z-index: 999;
 }
