--- a/src/App.css
+++ b/src/App.css
@@ -374,3 +374,75 @@ h1 {
   backdrop-filter: blur(0.1px);
   z-index: 999;
 }
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+  #root {
+    max-width: 100%;
+    padding: 0.5rem;
+  }
+
+  .container,
+  .container-disabled {
+    width: 20rem;
+    height: 20rem;
+    margin-top: 1.25rem;
+    border-width: 0.2rem;
+    border-radius: 1rem;
+  }
+
+  .play-btn {
+    max-width: 7rem;
+    margin-top: 0.5rem;
+    padding: 0.25rem 0.05rem;
+    font-size: 1rem;
+  }
+
+  .tile,
+  .tile-flashing {
+    padding: 0.5rem;
+    max-height: 70%;
+    max-width: 70%;
+    border-width: 0.1rem;
+    border-radius: 0.5rem;
+  }
+
+  .title {
+    font-size: 1.5rem;
+    -webkit-text-stroke-width: 2px;
+  }
+
+  .leaderboard {
+    width: 15rem;
+    max-height: 20rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .leaderboard-row {
+    height: 1rem;
+    margin: 0.25rem;
+  }
+
+  .name-input-label {
+    font-size: 2rem;
+  }
+
+  .name-input {
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+
+  .name-form-btn {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+  }
+
+  .bottom-bar {
+    margin-top: 1rem;
+    grid-template-columns: 10rem auto;
+  }
+}
