--- a/src/App.css
+++ b/src/App.css
@@ -24,24 +24,6 @@
   src: url(./fonts/LuckiestGuy-Regular.ttf);
 }
 
-/* Example media query for tablets (iPad landscape) */
-@media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-  /* Tablet landscape styles here */
-  .title {
-    font-size: 1.5rem; /* Adjust font size for smaller screens */
-  }
-}
-
-/* Example media query for iPhones (portrait) */
-@media screen and (max-width: 375px) and (orientation: portrait) {
-  /* iPhone portrait styles here */
-}
-
-/* Example media query for iPhones (landscape) */
-@media screen and (max-width: 812px) and (orientation: landscape) {
-  /* iPhone landscape styles here */
-}
-
 #root {
   max-width: 80rem; /* Converted from 1280px to rem */
   margin: 0 auto;
@@ -177,7 +159,7 @@ h1 {
 }
 
 .play-btn:active {
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 
 .hide {
@@ -225,29 +207,29 @@ h1 {
 
   50% {
     /* Adjusted keyframe percentage */
-    transform: scale(1.05);
+    transform: scale(1.2);
+    box-shadow: 0 0 20px 0 rgb(0, 0, 0);
   }
 
   100% {
     transform: scale(1);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 0 rgb(0, 0, 0);
   }
 }
 
 .title,
 title-gameover {
-  /* font-family: "Poppins"; */
   font-size: 2.25rem; /* Converted from 36px to rem */
   color: rgb(149, 188, 172);
   /* color: transparent; */
-  /* -webkit-text-stroke: 3px black; Add black border with a thickness of 2px */
+
   text-align: center;
   white-space: nowrap;
   /* overflow: auto; */
   text-transform: lowercase;
 
   position: relative;
-  animation: neon 1.5s ease-in-out infinite alternate;
+  /* animation: neon 1.5s ease-in-out infinite alternate; */
 }
 /* @keyframes neon {
   from {
@@ -263,6 +245,7 @@ title-gameover {
   }
 } */
 .title-gameover {
+  -webkit-text-stroke: 1px black;
 }
 
 .finalScore {
@@ -447,7 +430,7 @@ title-gameover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(52, 2, 2, 0);
+  background-color: rgba(52, 2, 2, 0.071);
 
   backdrop-filter: blur(0.1px);
   z-index: 999;
@@ -460,41 +443,49 @@ title-gameover {
     padding: 0.5rem;
   }
 
+  html,
+  body {
+    overflow: hidden;
+  }
+
   .container,
   .container-disabled {
-    width: 20rem;
-    height: 20rem;
-    margin-top: 1.25rem;
-    border-width: 0.2rem;
+    max-height: 90%;
+    max-width: 90%;
+    margin-top: 2rem;
+    border-width: 0.5rem;
     border-radius: 1rem;
+    /* max-height: 70vh; */
   }
 
   .play-btn {
     max-width: 7rem;
     margin-top: 0.5rem;
     padding: 0.25rem 0.05rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 
   .tile,
   .tile-flashing {
     padding: 0.5rem;
-    max-height: 70%;
-    max-width: 70%;
+    /* max-height: 70%;
+    max-width: 70%; */
     border-width: 0.1rem;
     border-radius: 0.5rem;
   }
 
   .title {
     font-size: 1.5rem;
-    -webkit-text-stroke-width: 2px;
+    max-width: 95%;
+    text-align: center;
+    /* -webkit-text-stroke-width: 2px; */
   }
 
   .leaderboard {
-    width: 15rem;
-    max-height: 20rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    max-width: 90vh;
+    max-height: 70vh;
+    /* margin-top: 1rem; */
+    margin: 1rem auto;
   }
 
   .leaderboard-row {
@@ -514,6 +505,9 @@ title-gameover {
   }
 
   .name-form-btn {
+    background-color: #281616;
+    color: white;
+
     padding: 0.5rem;
     margin-bottom: 1rem;
     margin-right: 1rem;
@@ -521,6 +515,7 @@ title-gameover {
 
   .bottom-bar {
     margin-top: 1rem;
+    max-width: 90%;
     grid-template-columns: 10rem auto;
   }
 }
